--- a/hello folder/Hello.html
+++ b/hello folder/Hello.html
@@ -6,7 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>print hello</title>
   </head>
+
   <body>
-    <h1>Hello!</h1>
+    <header>      
+      
+
+        <h1> my portfolio</h1>
+        
+
+
+      </pre>
+    </header>
+    <main></main>
+    <footer>
+      <h5>contact me at hellp@ac.com</h5>
+    </footer>
   </body>
 </html>
