--- a/hello folder/Hello.html
+++ b/hello folder/Hello.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>print hello</title>
-  </head>
 
-  <body>
-    <header>
-      <pre>     
-        <h1> my portfolio</h1>
-      </pre>
-    </header>
-    <main></main>
-    <footer>
-      <h5>contact me at hellp@ac.com</h5>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>print hello</title>
+</head>
+
+<body>
+  <header>
+    <h1> my portfolio</h1>
+    </pre>
+  </header>
+  <main>
+  
+      education: NSIT(COE)|school(JMV)
+    </section>
+    <section>
+      experiences : Microsoft | DRDO INTERN |=
+    </section>
+    <article>my story:</article>
+    <section>
+  
+      <a href="https://www.google.com/" target="-main"> <img src="https://blog.hubspot.com/hubfs/image8-2.jpg" alt="Google"
+       height="100"
+       width="50" 
+        >
+      
+      </a>
+
+    <aside>this is an add</aside>              
+     <div>hello world</div>
+  </main>
+
+  <footer>
+    <h5>contact me at hellp@ac.com</h5>
+  </footer>
+</body>
+
 </html>
