--- a/hello folder/Hello.html
+++ b/hello folder/Hello.html
@@ -38,5 +38,98 @@
     <h5>contact me at hellp@ac.com</h5>
   </footer>
 </body>
+<main>
+  <!-- <ul>
+    <li>apple</li>
+    <ul>
+      <li>color:red</li>
+      <li>season:winters</li>
+    </ul>
+    <li>mango/li>
+    <ul>
+      <li>color:red</li>
+      <li>season:winters</li>
+    </ul>
+    <li>litchi</li>
+  </ul> -->
 
+  <!-- <ol>
+    <li>apple</li>
+    <ol>
+      <li>color:red</li>
+      <li>season:winters</li>
+    </ol>
+    <li>mango</li>
+    <ol>
+      <li>color:red</li>
+      <li>season:winters</li>
+    </ol>
+    <li>litchi</li>
+  </ol>
+</main> -->
+
+<!-- <table>
+  <thead>
+  <caption>
+    student data
+  </caption>
+  <tr>
+
+    <th colspan="2">
+      INFORMATION
+    </th>
+    >
+  </tr>
+ </thead>
+ <tbody>
+  <tr>
+    <td>
+      Aradhana
+    </td>
+    <td>
+      1664
+    </td>
+  </tr>
+  </tbody>
+</table> -->
+
+<form action="/action.php">
+<input type="text" placeholer="username">
+<br>
+<br>
+<input type="password" placeholer="password">
+<br><br>
+<h5>select youe class</h5>
+<label for="101">
+<input type="radio" value="class XI" name="class" id="101">"class XI
+
+</label>
+<br><br>
+<label for="102">
+<input type="radio" value="class XII" name="class" id="102">"class XII
+</label>
+
+<br><br>
+<h5>select fav sybjects</h5>
+<label for="math">
+  <input type="checkbox" value="math" name="subject" id="101">Math
+  
+
+</label>
+<br><br>
+
+<label for="phys">
+  <input type="checkbox" value="phy" name="subject" id="102">phys
+</label>
+
+<label for="chemistry">
+  <input type="checkbox" value="chemistry" name="subject" id="103">chemistry
+</label>
+
+<label for="computer">
+  <input type="checkbox" value="computer" name="subject" id="104">computer
+</label>
+<br><br>
+<textarea name="feedback"id="101" placeholder="please give your feedback here"> feedback</textarea>
+</form>
 </html>
