--- a/hello folder/Hello.html
+++ b/hello folder/Hello.html
@@ -130,6 +130,20 @@
   <input type="checkbox" value="computer" name="subject" id="104">computer
 </label>
 <br><br>
-<textarea name="feedback"id="101" placeholder="please give your feedback here"> feedback</textarea>
-</form>
+
+<select name="city">
+  <option value="Delhi"> Delhi</option>
+  <option value="Banglore"> Banglore</option>
+  <option value="Pune"> Pune</option>
+  <option value="Mumbai"> Mumbai</option>
+  </option>
+<br><br>
+
+<textarea name="feedback"id="101" placeholder="please give your feedback here" row="5"> feedback</textarea>
+
+<br><br>
+
+<!-- <input type="submit" value="submit">
+</form> -->
+
 </html>
