--- a/index.html
+++ b/index.html
@@ -35,21 +35,28 @@
 <br/>
 <br/>
 <br/>
-<p>
+
+
+<style>
+h2{
+  color:brown
+}
+
+</style>
   <hr>
   <u> sample paragraph</u>sample paragraph sample paragraph sample paragraph sample paragraph sample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraphsample paragraph</p>
   <big> this tag show big text</big>
   <hr/>
-  <small> this tag show small text</small>
+  <small style="color:blueviolet"> this tag show small text</small>
 <hr>
 <p>H<sub>2</sub>0</p>
 <p>3<sup>2</sup>=9</p>
 
 <pre>
 Lorem             ipsum dolor sit amet consectetur adipisicing elit. Commodi, nobis temporibus, optio adipisci esse doloribus quis ipsa enim, voluptatem sequi sapiente dolorum debitis quidem earum animi? Magni earum totam animi.
-
-
-
+<style 
+<link rel="stylesheet " href="style.css">
+</style>
 </pre>
 
 
