--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ h2{
 <pre>
 Lorem             ipsum dolor sit amet consectetur adipisicing elit. Commodi, nobis temporibus, optio adipisci esse doloribus quis ipsa enim, voluptatem sequi sapiente dolorum debitis quidem earum animi? Magni earum totam animi.
 <style 
-<link rel="stylesheet " href="style.css">
+<link rel="stylesheet " href="./style.css">
 </style>
 </pre>
-
+<h1>this is heading</h1>
 
 
   </body>
