--- a/classroom/index.html
+++ b/classroom/index.html
@@ -7,47 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="h1">heading 1</h1>
-    <h1 id="h2">heading 2</h1>
-    <h1 id="h3">heading 3</h1>
-    <h1 id="h4">heading 4</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sed alias
-      corrupti impedit, ipsum saepe fugiat natus. Doloribus velit sequi sunt,
-      quia delectus ad a nam possimus sit necessitatibus magnam Lorem ipsum
-      dolor sit amet consectetur adipisicing elit. Reiciendis ullam vero aut,
-      voluptas praesentium accusamus porro eos, aliquam in libero magni cum
-      harum sunt architecto nemo incidunt hic eum aspernatur. Optio quae
-      perspiciatis quia cupiditate, recusandae voluptatem quidem! Pariatur
-      reprehenderit iste provident molestiae, quisquam cumque, perferendis iure
-      explicabo officia eius ipsum vero sed neque saepe quaerat! Tenetur, fuga
-      ad! Libero? Voluptas odio maxime unde, dolor amet animi quod odit,
-      necessitatibus obcaecati dicta quidem esse. Voluptas voluptate eius
-      consequatur aut cumque. Porro quia mollitia sint voluptatum quos illum vel
-      veritatis autem? Praesentium eveniet unde aliquam sint sunt beatae iusto
-      blanditiis, architecto quam, ipsam a ad ex ullam et mollitia tenetur harum
-      animi doloremque, ea minus soluta ab iure nulla! Accusamus, saepe. Dicta
-      perspiciatis quod pariatur corporis omnis magnam unde voluptas saepe
-      ducimus consequatur, provident quasi corrupti harum ea voluptate eligendi
-      tempore incidunt? Aspernatur sapiente adipisci, quod doloribus explicabo
-      commodi minus! Aperiam! Nesciunt excepturi eum, doloremque, fugiat
-      deleniti voluptas aut harum consequuntur et iure dicta, doloribus
-      accusamus cumque debitis mollitia quo ullam natus similique id vitae unde
-      voluptatem ad! Fugiat, sed temporibus! Aliquam nulla, cum dolor architecto
-      modi ratione? Laborum saepe corrupti voluptatum modi iure, earum odio nam
-      quae quas repellendus. Neque commodi doloremque omnis repellat officiis
-      voluptatibus corrupti labore voluptas sapiente. Provident alias atque
-      neque obcaecati perferendis impedit dicta illo, laudantium, voluptatem
-      doloribus deleniti repellat, rem est dolorem voluptate similique eos ut
-      placeat? Quam dolores error assumenda, aspernatur sequi laudantium iure!
-      Dignissimos ad ut modi, non rem officiis rerum beatae quibusdam, quos
-      maxime, asperiores magnam optio? Sit aperiam, quam suscipit accusantium
-      officiis illo rem eaque saepe? Quae laboriosam neque incidunt iure! Sequi,
-      possimus iure delectus obcaecati incidunt consequuntur vitae distinctio,
-      odio alias, amet deleniti expedita inventore magnam? Unde repudiandae
-      alias, dignissimos laborum amet error sed, soluta fugit consequuntur
-      facilis, quae quam!
-    </p>
+    <h1>apna college</h1>
+    <div id="outer">
+      outer
+      <div id="inner">inner</div>
+    </div>
   </body>
-  <a href="https://www.google.com/" target="_blank">click me</a>
 </html>
