--- a/classroom1/index.html
+++ b/classroom1/index.html
@@ -18,9 +18,15 @@
       </div>
     </header>
     <div id="content">
-      <div class="contentBox"></div>
-      <div class="contentBox"></div>
-      <div class="contentBox"></div>
+      <div class="contentBox" style="background-color: rgba(255, 0, 0, 0.5)">
+        Buy your favorite soap
+      </div>
+      <div class="contentBox" style="background-color: rgba(0, 255, 0, 0.5)">
+        Buy your gadgets
+      </div>
+      <div class="contentBox" style="background-color: rgba(0, 0, 255, 0.5)">
+        Reny your fac movies
+      </div>
     </div>
     <footer>
       made with &hearts;by Amazon
