--- a/project/index.html
+++ b/project/index.html
@@ -21,10 +21,11 @@
         </div>
 
         <div class="nav-address">
-          <p>Deliver to</p>
-          <div class="add-icon"></div>
-          <i class="fa-sharp fa-solid fa-location-dot"></i>
-          <p>India</p>
+          <p class="add-first">Deliver to</p>
+          <div class="add-icon">
+            <i class="fa-sharp fa-solid fa-location-dot"></i>
+            <p class="add-second">India</p>
+          </div>
         </div>
       </div>
     </header>
