--- a/project/index.html
+++ b/project/index.html
@@ -37,6 +37,35 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
         </div>
+        <div class="nav-signin border">
+          <p><span>Hello, sign in</span></p>
+          <p class="nav-second">Account & Lists</p>
+        </div>
+
+        <div class="nav-return border">
+          <p><span>Return</span></p>
+          <p class="nav-second">& Orders</p>
+        </div>
+
+        <div class="nav-cart border">
+          <i class="fa-solid fa-cart-shopping"></i>
+          cart
+        </div>
+      </div>
+
+      <div class="panel">
+        <div class="panel-all">
+          <i class="fa-solid fa-bars"></i>
+          All
+        </div>
+        <div class="panel-ops">
+          <p>Today's Deal</p>
+          <p>customer service</p>
+          <p>Registry</p>
+          <p>Gift cards</p>
+          <p>Sell</p>
+        </div>
+        <div class="panel-deals">shop deals in electronics</div>
       </div>
     </header>
   </body>
