--- a/project/index.html
+++ b/project/index.html
@@ -68,5 +68,14 @@
         <div class="panel-deals">shop deals in electronics</div>
       </div>
     </header>
+    <div class="hero-section">
+      <div class="hero-msg">
+        <p>
+          You are on amazon.com. you can also shop on amazon india for milloins
+          of product with fast local delivery.
+          <a>Click here to go to amazon.in</a>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
