--- a/project/index.html
+++ b/project/index.html
@@ -77,5 +77,101 @@
         </p>
       </div>
     </div>
+
+    <div class="shop-section">
+      <div class="box">
+        <div>
+          <h2>clothes</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box1_image.jpg')"
+            ;
+          ></div>
+          <p>see more</p>
+        </div>
+      </div>
+      <div class="box">
+        <div>
+          -
+          <h2>Health & personal care</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box2_image.jpg')"
+            ;
+          ></div>
+          <p>see more</p>
+        </div>
+      </div>
+      <div class="box">
+        <div>
+          <h2>furniture</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box3_image.jpg')"
+            ;
+          ></div>
+          --
+          <p>see more</p>
+        </div>
+      </div>
+      <div class="box">
+        <div>
+          <h2>electronics</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box4_image.jpg')"
+            ;
+          ></div>
+          <p>see more</p>
+        </div>
+      </div>
+      <div class="box1 box">
+        <div>
+          <h2>Beauty picks</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box5_image.jpg')"
+            ;
+          ></div>
+          <p>see more</p>
+        </div>
+      </div>
+      <div class="box">
+        <div>
+          -
+          <h2>Health & personal care</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box6_image.jpg')"
+            ;
+          ></div>
+          <p>see more</p>
+        </div>
+      </div>
+      <div class="box">
+        <div>
+          <h2>Health & personal care</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box7_image.jpg')"
+            ;
+          ></div>
+          --
+          <p>see more</p>
+        </div>
+      </div>
+      <div class="box">
+        <div>
+          <h2>Health & personal care</h2>
+          <div
+            class="box-img"
+            style="background-image: url('box8_image.jpg')"
+            ;
+          ></div>
+          <p>see more</p>
+        </div>
+      </div>
+      ==
+    </div>
   </body>
 </html>
