--- a/project/index.html
+++ b/project/index.html
@@ -139,7 +139,7 @@
       <div class="box">
         <div>
           -
-          <h2>Health & personal care</h2>
+          <h2>New arrival in toys</h2>
           <div
             class="box-img"
             style="background-image: url('box6_image.jpg')"
@@ -150,7 +150,7 @@
       </div>
       <div class="box">
         <div>
-          <h2>Health & personal care</h2>
+          <h2>Pet care</h2>
           <div
             class="box-img"
             style="background-image: url('box7_image.jpg')"
@@ -162,7 +162,7 @@
       </div>
       <div class="box">
         <div>
-          <h2>Health & personal care</h2>
+          <h2>Discover fashion trends</h2>
           <div
             class="box-img"
             style="background-image: url('box8_image.jpg')"
@@ -171,7 +171,62 @@
           <p>see more</p>
         </div>
       </div>
-      ==
     </div>
+
+    <footer>
+      <div class="foot-panel1">Back to top</div>
+      <div class="foot-panel2">
+        <ul>
+          <p>Get to know us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About amazon</a>
+          <a>Investor relations</a>
+          <a>Amozon Devices</a>
+          <a>Amozon science</a>
+        </ul>
+        <ul>
+          <p>Get to know us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About amazon</a>
+          <a>Investor relations</a>
+          <a>Amozon Devices</a>
+          <a>Amozon science</a>
+        </ul>
+        <ul>
+          <p>Get to know us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About amazon</a>
+          <a>Investor relations</a>
+          <a>Amozon Devices</a>
+          <a>Amozon science</a>
+        </ul>
+        <ul>
+          <p>Get to know us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About amazon</a>
+          <a>Investor relations</a>
+          <a>Amozon Devices</a>
+          <a>Amozon science</a>
+        </ul>
+      </div>
+
+      <div class="foot-panel3">
+        <div class="logo"></div>
+      </div>
+      <div class="foot-panel4">
+        <div class="pages">
+          <a>Conditions of use</a>
+          <a>Privacy Notice</a>
+          <a>Your Ads Privacy Choices</a>
+        </div>
+        <div class="copyright">
+          © 1996-2023, Amazon.com, Inc. or its affiliates
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
