--- a/javascript/aradhana/index.html
+++ b/javascript/aradhana/index.html
@@ -8,17 +8,10 @@
  
 </head>
 <body>
-    <div>
-    abcd
-    <div></div>
-    <p>abcd</p>
-</div>
-    <h1 class="myclass">Dom demo by Apna college</h1>
-    <h1 class="myclass">javascript</h1>
-    <h4 class="myclass">Topic1 : strater code </h4>
-    <p>let's learn about Dom conceot in detail.</p>
-    <p>2nd paragraph</p>
-    <button id="myId">click me!</button>
+    <h2>Hello javascript!</h2>
+   <div  class="box">first div</div>
+   <div  class="box">second div</div>
+   <div  class="box">third div</div>
     <script src= "javascript.js"></script> 
 </body>
 </html>      
