--- a/javascript/aradhana/index.html
+++ b/javascript/aradhana/index.html
@@ -8,10 +8,7 @@
  
 </head>
 <body>
-    <h2>Hello javascript!</h2>
-   <div  class="box">first div</div>
-   <div  class="box">second div</div>
-   <div  class="box">third div</div>
+<button id="mode">change mode</button>
     <script src= "javascript.js"></script> 
 </body>
 </html>      
