--- a/classroom/dice-roll simulator/index.html
+++ b/classroom/dice-roll simulator/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +11,9 @@
   <div class="dice" id="dice">&#9860</div>
   <button id="roll-button">Roll Dice</button>
   <ul id="roll-history">
-   <li>Roll 1: <span>&#9856;</span></li>
-   <li>Roll 2: <span>&#9860;</span></li>
-  </ul>  
+   <!-- <li>Roll 1: <span>&#9856;</span></li>
+   <li>Roll 2: <span>&#9860;</span></li> -->
+  </ul> 
+  <script src="index.js"></script> 
 </body>
 </html>
